--- a/css/about.css
+++ b/css/about.css
@@ -117,7 +117,7 @@ img{
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%
+	width: 100%;
 	height: 50%;
 	background: rgba(255,255,255,.1);
 	z-index: 10;
