--- a/css/home.css
+++ b/css/home.css
@@ -530,8 +530,8 @@ nav ul li a:hover::after{
 .icon img{
 	margin-top: 10px;
 	width: 40px;
-    height: 40px;
-    line-height: 60px;
+        height: 40px;
+        line-height: 60px;
 }
 
 .subjects .subjects-content .box h5{
@@ -550,7 +550,7 @@ nav ul li a:hover::after{
 
 .skills-content{
 	flex: 0 0 50%;
-	max-width: 50%
+	max-width: 50%;
 	padding-right: 30px;
 }
 
@@ -674,7 +674,7 @@ nav ul li a:hover::after{
 	font-weight: bold;
 	margin-top: -5px;
 	text-decoration: underline;
-    text-align: center;
+        text-align: center;
 }
 
 .contact-me button{
@@ -842,14 +842,14 @@ td{
 tr:nth-child(even){background-color: #f2f2f2}
 
 .intro-container-mobile{
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
-    width: 80%;
-    margin: 0 auto;
-    display: table;
-    z-index: 999;
-    margin-top: 200px;
+        background-color: #fff;
+        border-radius: 20px;
+        box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+        width: 80%;
+        margin: 0 auto;
+        display: table;
+        z-index: 999;
+        margin-top: 200px;
 }
 
 .intro-text-mobile{
